робе рефакторінг коду у сасс

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,11 @@
 @import "./layouts/cind-of-work";
 
 @import "./layouts/team";
-@import "./components/teamCards";
 
 @import "./layouts/clients";
+
+@import './layouts/_footer';
+
+@import './components/modal';
+
+@import './layouts/portfolio';
