--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,7 +1,7 @@
 .logo {
   color: $contrastColor;
   font-size: 26px;
-  font-family: $main-font;
+  font-family: $secondary-font;
   font-weight: 700;
   line-height: 1.19;
 }
