--- a/css/main.css
+++ b/css/main.css
@@ -92,10 +92,14 @@ h2 {
   line-height: 1.17;
 }
 
+.header {
+  border-bottom: 1px solid #ECECEC;
+}
+
 .logo {
   color: rgb(33, 150, 243);
   font-size: 26px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   line-height: 1.19;
 }
@@ -201,7 +205,6 @@ h2 {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../img/background.jpg) no-repeat center top/cover;
   background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/background.jpg) no-repeat center top/cover;
   text-align: center;
-  border: 1px solid #ECECEC;
   background-color: rgb(47, 48, 58);
 }
 .hero__btn {
@@ -376,7 +379,7 @@ h2 {
           justify-content: center;
   width: 44px;
   height: 44px;
-  fill: rgb(117, 117, 117);
+  fill: rgb(175, 177, 184);
   border-radius: 50%;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -414,7 +417,7 @@ h2 {
   height: 92px;
   border: 1px solid rgb(175, 177, 184);
   border-radius: 4px;
-  fill: rgb(117, 117, 117);
+  fill: rgb(175, 177, 184);
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
