--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -58,7 +58,7 @@
     justify-content: center;
     width: 44px;
     height: 44px;
-    fill: $secondColor;
+    fill: $iconColor;
     border-radius: 50%;
 
     transition: fill $animation, 
